@@ -3,7 +3,6 @@ package org.matsim.utils.vis.otfvis.opengl.gui;
 import java.awt.Color;
 import java.awt.Component;
 import java.awt.Graphics;
-import java.awt.Graphics2D;
 import java.awt.Rectangle;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
@@ -31,39 +30,36 @@ import org.matsim.utils.vis.otfvis.interfaces.OTFDrawer;
 // DS TODO should not be an OTFDrawer, need to handle invalidate better
 public class OTFTimeLine extends JToolBar implements OTFDrawer, ActionListener, ItemListener, ChangeListener {
 
-	/**
-	 * 
-	 */
 	private static final long serialVersionUID = 1L;
 	private final OTFHostControlBar hostControl;
 	private JSlider times;
-	Collection<Integer> cachedTime =  new ArrayList<Integer>();
-	
-    Hashtable<Integer, JLabel> labelTable = 
-        new Hashtable<Integer, JLabel>();
-	
+	Collection<Integer> cachedTime = new ArrayList<Integer>();
+
+	Hashtable<Integer, JLabel> labelTable =
+		new Hashtable<Integer, JLabel>();
+
 	public OTFTimeLine(String string, OTFHostControlBar hostControl) {
 		super(string);
 		this.hostControl = hostControl;
 		hostControl.addHandler("timeline", this);
 
 		addSlider();
-		
+
 		JButton button = new JButton();
 		button.setText("[");
 		button.setActionCommand("setLoopStart");
 		button.addActionListener(this);
-	    button.setToolTipText("Sets the loop start time");
-	    add(button);
-	    
+		button.setToolTipText("Sets the loop start time");
+		add(button);
+
 		button = new JButton();
 		button.setText("]");
 		button.setActionCommand("setLoopEnd");
 		button.addActionListener(this);
-	    button.setToolTipText("Sets the loop end time");
+		button.setToolTipText("Sets the loop end time");
 
-	    add(button);
-	    this.setVisible(true);
+		add(button);
+		this.setVisible(true);
 	}
 
 	public class MyJSlider extends JSlider {
@@ -73,23 +69,22 @@ public class OTFTimeLine extends JToolBar implements OTFDrawer, ActionListener, 
 
 		@Override
 		public void paint(Graphics g) {
-	       Graphics2D g2 = (Graphics2D) g;
-	        super.paint(g);
-	        Rectangle bounds = g.getClipBounds();
-	        bounds.grow(-32, 0);
-	        
-	        BasicSliderUI ui = (BasicSliderUI)getUI();
-	        double delta = getMaximum() - getMinimum();
-	        // get cached timesteps fomr hostctrl and draw them
-	        synchronized (cachedTime) {
-		        for(Integer time : cachedTime) {
-		        	g.setColor(Color.LIGHT_GRAY);
-		        	g.fillRect(bounds.x + (int)(bounds.width*((time- getMinimum())/delta)), (int)bounds.getCenterY(), 5, 5);
-		        }
-	        }
+			super.paint(g);
+			Rectangle bounds = g.getClipBounds();
+			bounds.grow(-32, 0);
+
+			BasicSliderUI ui = (BasicSliderUI)getUI();
+			double delta = getMaximum() - getMinimum();
+			// get cached timesteps fomr hostctrl and draw them
+			synchronized (cachedTime) {
+				for(Integer time : cachedTime) {
+					g.setColor(Color.LIGHT_GRAY);
+					g.fillRect(bounds.x + (int)(bounds.width*((time- getMinimum())/delta)), (int)bounds.getCenterY(), 5, 5);
+				}
+			}
+		}
 	}
-	}
-	  
+
 	void replaceLabel(String label, int newEnd) {
 		for (Integer i : labelTable.keySet() ) {
 			JLabel value = labelTable.get(i);
@@ -98,12 +93,12 @@ public class OTFTimeLine extends JToolBar implements OTFDrawer, ActionListener, 
 				break;
 			}
 		}
-        labelTable.put(new Integer(newEnd), new JLabel(label));
-        times.setLabelTable(labelTable);
-    
-        times.repaint();
+		labelTable.put(Integer.valueOf(newEnd), new JLabel(label));
+		times.setLabelTable(labelTable);
+
+		times.repaint();
 	}
-	
+
 	public void actionPerformed(ActionEvent e) {
 		// remove old label
 		// get actual time
@@ -116,60 +111,59 @@ public class OTFTimeLine extends JToolBar implements OTFDrawer, ActionListener, 
 			replaceLabel("]", time);
 		}
 		// insert new label
-		
 	}
 
 	public void itemStateChanged(ItemEvent e) {
 		// TODO Auto-generated method stub
-		
 	}
 
 	/** Listen to the slider. */
-    public void stateChanged(ChangeEvent e) {
-        JSlider source = (JSlider)e.getSource();
-        if (!source.getValueIsAdjusting()) {
-            int newTime_s = source.getValue();
-            hostControl.setNEWTime(newTime_s);
-        }else hostControl.stopMovie();
-    }
-	   public void addSlider() {
+	public void stateChanged(ChangeEvent e) {
+		JSlider source = (JSlider)e.getSource();
+		if (!source.getValueIsAdjusting()) {
+			int newTime_s = source.getValue();
+			hostControl.setNEWTime(newTime_s);
+		} else {
+			hostControl.stopMovie();
+		}
+	}
 
-	        //Create the slider.
-		   Collection<Double> steps = hostControl.getTimeSteps();
-		   Double[] dsteps = steps.toArray(new Double[0]);
-	       
-		   times = new MyJSlider(JSlider.HORIZONTAL,  dsteps[0].intValue(), dsteps[dsteps.length-1].intValue(), (int)hostControl.getTime());
-	        
-	        times.addChangeListener(this);
-	        times.setMajorTickSpacing((dsteps[0].intValue()-dsteps[dsteps.length-1].intValue())/10);
-	        times.setPaintTicks(true);
-	        
-	        //Create the label table.
-	        //PENDING: could use images, but we don't have any good ones.
-	        labelTable.put(new Integer( dsteps[0].intValue() ),
-	                       new JLabel(Time.writeTime(dsteps[0])));
-	                     //new JLabel(createImageIcon("images/stop.gif")) );
-	        labelTable.put(new Integer( dsteps[dsteps.length-1].intValue() ),
-	                       new JLabel(Time.writeTime(dsteps[dsteps.length-1])) );
-	                     //new JLabel(createImageIcon("images/fast.gif")) );
-	        
-	        int n = dsteps.length/10;
-	        
-	        for(int i= n; i< dsteps.length-1; i+=n) {
-		        labelTable.put(new Integer( dsteps[i].intValue() ),
-	                       new JLabel(Time.writeTime(dsteps[i])) );
-	        }
-	        times.setLabelTable(labelTable);
+	public void addSlider() {
 
-	        times.setPaintLabels(true);
-	        times.setBorder(BorderFactory.createEmptyBorder(0,0,0,10));
-	        add(times);
+		//Create the slider.
+		Collection<Double> steps = hostControl.getTimeSteps();
+		Double[] dsteps = steps.toArray(new Double[0]);
 
-	    }
+		times = new MyJSlider(JSlider.HORIZONTAL,  dsteps[0].intValue(), dsteps[dsteps.length-1].intValue(), (int)hostControl.getTime());
+
+		times.addChangeListener(this);
+		times.setMajorTickSpacing((dsteps[0].intValue()-dsteps[dsteps.length-1].intValue())/10);
+		times.setPaintTicks(true);
+
+		//Create the label table.
+		//PENDING: could use images, but we don't have any good ones.
+		labelTable.put(Integer.valueOf( dsteps[0].intValue() ),
+				new JLabel(Time.writeTime(dsteps[0])));
+		//new JLabel(createImageIcon("images/stop.gif")) );
+		labelTable.put(Integer.valueOf( dsteps[dsteps.length-1].intValue() ),
+				new JLabel(Time.writeTime(dsteps[dsteps.length-1])) );
+		//new JLabel(createImageIcon("images/fast.gif")) );
+
+		int n = dsteps.length/10;
+
+		for(int i= n; i< dsteps.length-1; i+=n) {
+			labelTable.put(Integer.valueOf( dsteps[i].intValue() ),
+					new JLabel(Time.writeTime(dsteps[i])) );
+		}
+		times.setLabelTable(labelTable);
+
+		times.setPaintLabels(true);
+		times.setBorder(BorderFactory.createEmptyBorder(0,0,0,10));
+		add(times);
+	}
 
 	public void clearCache() {
 		// TODO Auto-generated method stub
-		
 	}
 
 	public Component getComponent() {
@@ -184,36 +178,34 @@ public class OTFTimeLine extends JToolBar implements OTFDrawer, ActionListener, 
 
 	public void handleClick(java.awt.geom.Point2D.Double point, int mouseButton) {
 		// TODO Auto-generated method stub
-		
 	}
 
 	public void handleClick(Rectangle currentRect, int button) {
 		// TODO Auto-generated method stub
-		
 	}
 
 	public void invalidate(int time) throws RemoteException {
 		if(time >= 0) times.setValue(time);
 		else {
-	        synchronized (cachedTime) {
+			synchronized (cachedTime) {
 				cachedTime.add(-time);
-				  times.repaint();
-	        }
+				times.repaint();
+			}
 		}
 	}
 
-	public void setCachedTime(int time) throws RemoteException {
+	public void setCachedTime(int time) {
 		if(time == -1) cachedTime.clear();
 		else {
-	        synchronized (cachedTime) {
+			synchronized (cachedTime) {
 				cachedTime.add(time);
-				  times.repaint();
-	        }
+				times.repaint();
+			}
 		}
 	}
 
 	public void redraw() {
 		// TODO Auto-generated method stub
-		
+
 	}
-	   }
+}
